--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -2,6 +2,7 @@
   width: 100%;
   margin: auto;
   height: 250px;
+  max-width: 500px;
   overflow: scroll;
   text-align: center;
   font-weight: bold;
