--- a/src/components/Order/Order.module.css
+++ b/src/components/Order/Order.module.css
@@ -1,8 +1,14 @@
 .Order {
   width: 80%;
-  border: 1px solid #eee;
-  box-shadow: 0 2px 3px #ccc;
+  border-radius: 0.375rem;
+  background-color: #fafafa;
+  box-shadow: drop-shadow(0 1px 2px rgb(0 0 0 / 0.1));
   padding: 10px;
   margin: 10px auto;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: space-between;
   box-sizing: border-box;
+  min-height: 120px;
 }
